[project]
authors = [{name = "AimPizza", email = "rickomo.us@gmail.com"}]
dependencies = []
name = "jellyfin-library-helper"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
jellyfin_library_helper = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ruff = ">=0.12.3,<0.13"
cinemagoer = ">=2023.5.1,<2024"
python-lsp-server = ">=1.13.0,<2"


[tool.ruff]
select = ["D", "E", "F", "W", "B"]
ignore = []

[tool.ruff.format]
quote-style = "single"
